# VideoClientAPI-python

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
pxgrabapi_python/: __init__.py  client.py  logging.py  utils.py
pxgrabapi_python/include/: MvFrameHeader.h  video_client_api.h
src/: plugins.cpp
tests/: test.py
video_client/: __init__.py
videoclientapi_python/: __init__.py  client.py  utils.py
